...
) {
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("GameList")
    ) {
        if (searchResult.isNotEmpty()) {
            items(searchResult, key = { it.item.id }) { data ->
                ListItem(
                    gameName = data.item.gameName,
                    bannerUrl = data.item.bannerUrl,
...
