...
                            id = R.drawable.ic_baseline_favorite_border_24
                        )
                    Icon(
                        imageVector = icon,
                        tint = if (isFavorite) MaterialTheme.colorScheme.primary else Color.Black,
                        contentDescription = stringResource(R.string.menu_favorite),
                        modifier = Modifier.size(60.dp).testTag("ButtonFavorite")
                    )
                }
            }

            Column(
                horizontalAlignment = Alignment.Start,
...
