...
            "https://cdn.cloudflare.steamstatic.com/steam/apps/1190970/header.jpg?t=1702674942",
            "14 Dec, 2023",
            "https://store.steampowered.com/app/1190970/House_Flipper_2/"
        ),
        Game(
            "4",
            "EA SPORTS FC™ 24",
            "EA SPORTS FC™ 24 welcomes you to The World’s Game: the most true-to-football experience ever with HyperMotionV, PlayStyles optimised by Opta, and an enhanced Frostbite™ Engine.",
            "Rp 759.000",
            "Frozen District, Empyrean",
            "https://cdn.cloudflare.steamstatic.com/steam/apps/2195250/header.jpg?t=1702408161",
            "28 Sep, 2023",
            "https://store.steampowered.com/app/2195250/EA_SPORTS_FC_24/"
...
